--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -170,17 +170,17 @@ Todas as informações fotométricas e astrométricas da redução, para todos o
 
 \indent \indent Ocultação estelar é um evento que ocorre quando um objeto do Sistema Solar passa na frente de uma estrela de forma que o brilho da estrela é completamente ou parcialmente bloqueado durante um intervalo de tempo. A variação de brilho da estrela pode ser medido fazendo-se observações com exposições curtas. O produto gerado é uma curva de fluxo de luz x tempo. Essa técnica pode ser utilizada para se obter parâmetros físicos dos objetos ocultantes como tamanho, forma, albedo, densidade (se a massa é conhecida), detecção da presença de atmosfera, satélites, anéis, etc \citep{Elliot1979}.
 
-A Fig. \ref{Fig: occ-scheme}.1 mostra uma curva de luz esquemática de uma ocultação estelar central por um planeta com atmosfera e anéis. Ao ocultar a estrela, os anéis passarão primeiro, a densidade do anel, tamanho e tempo de exposição determinará a queda de brilho da estrela. Ao chegar no corpo principal, caso não possua atmosfera, a queda de brilho será abrupta, caso possua, a queda de brilho será mais suave devido à refração da luz da estrela na atmosfera dificultando a determinação da superfície do objeto.
+A Fig. \ref{Fig: occ-scheme} mostra uma curva de luz esquemática de uma ocultação estelar central por um planeta com atmosfera e anéis. Ao ocultar a estrela, os anéis passarão primeiro, a densidade do anel, tamanho e tempo de exposição determinará a queda de brilho da estrela. Ao chegar no corpo principal, caso não possua atmosfera, a queda de brilho será abrupta, caso possua, a queda de brilho será mais suave devido à refração da luz da estrela na atmosfera dificultando a determinação da superfície do objeto.
 
 \begin{figure}[h]
 \begin{centering}
 \includegraphics[scale=0.75]{figuras/stellarocc.png} 
-\label{Fig: occ-scheme}
 \caption{Curva de luz esquemática de uma ocultação estelar por um planeta com atmosfera e anéis. Fonte: \cite{Elliot1979}}
+\label{Fig: occ-scheme}
 \end{centering} 
 \end{figure}
 
-A suavidade da curva portanto será determinada pelo gradiente de temperatura, pressão e densidade da atmosfera, presença de nuvens, etc. A luz da estrela nunca será completamente apagada quando ocultada por um objeto com atmosfera devido à refração da luz na atmosfera onde parte dela convergirá na direção do observador. Caso a ocultação seja central para o observador haverá um aumento de brilho no meio do evento ("flash") pois a convergência da luz será máxima. A atmosfera, no caso, agiria como uma lente como mostrado na Fig. \ref{Fig: occ-scheme}.1.
+A suavidade da curva portanto será determinada pelo gradiente de temperatura, pressão e densidade da atmosfera, presença de nuvens, etc. A luz da estrela nunca será completamente apagada quando ocultada por um objeto com atmosfera devido à refração da luz na atmosfera onde parte dela convergirá na direção do observador. Caso a ocultação seja central para o observador haverá um aumento de brilho no meio do evento ("flash") pois a convergência da luz será máxima. A atmosfera, no caso, agiria como uma lente como mostrado na Fig. \ref{Fig: occ-scheme}.
 
 Quando o evento é observado por diversos telescópios espalhados, cada observador verá a ocultação em latitudes diferentes. Essas diversas curvas de luz permitirão reconstruir a forma do objeto, possivelmente identificando estruturas superficiais como montanhas e crateras. Como a estrela está muito distante, podendo ser considerada quase pontual, a sombra do objeto durante a ocultação é muito próximo ao seu tamanho real.
 
@@ -196,9 +196,16 @@ Nas seções \ref{Sec: Ceres-2010-occ} e \ref{Sec: Ceres-2013-occ} detalhamos os
 \section{Introdução}
 \label{Sec: TNOs-intro}
 
-\indent \indent Os objetos trans-Netunianos (TNOs) estão localizados após a órbita de Netuno, como o própio nome diz. Devido às suas grandes distâncias, eles podem ser considerados remanescentes quase inalterados da formação do Sistema Solar \cite{Assafin2012}. Já os Centauros se localizam entre as órbitas de Júpiter e Netuno. Eles são objetos transientes entre TNOs e cometas da família de Júpiter e acredita-se que tenha origem comum aos TNOs \citep{Camargo2013}.
+\indent \indent Dentro do contexto explicitado no capítulo \ref{Cap: intro}, os TNOs são uns dos objetos mais significantes por possivelmente serem a fonte de outras populações do Sistema Solar, como por exemplo Centauros \citep{Fernandez2002}, Satélites Irregulares \citep{Nesvorny2007} e Troianos \citep{Morbidelli2005}. Também existe a possibilidade de que Ceres tenha uma origem como TNO \citep{McKinnon2012}, assim como Tritão \citep{Agnor2006}.
 
-Estudá-los é essencial para entender a formação e evolução do Sistema Solar.
+Pouco se conhece sobre Centauros e TNOs, pois nunca foram visitados por sondas e a grande maioria das observações são de origem fotométrica usual (magnitudes, cores) ou, em menor parte, espectroscópica, ou em menor número ainda por telescópios espaciais. Plutão será o primeiro objeto da classe a ser visitado por uma sonda, a \textit{New Horizons}.
+
+Estimar parâmetros físicos para esses objetos é um desafio, porém essencial para acessar a massa atual e composição (material) da população e recuperar sua história evolutiva. É possível obter seus tamanhos através de modelos, por exemplo combinando o brilho no visível e emissão térmica obtida em infra-vermelho. Todavia os erros obtidos são piores que 10 \% \citep{Camargo2013}.
+
+Para obter parâmetros como tamanho, albedo, densidade, etc, de forma muito mais precisa e acurada, sem a necessidade de se adotar modelos, utilizamos a técnica de ocultações estelares. Até 2009, quando foi observada uma ocultação de 2002TX300 \citep{Elliot2010}, Plutão e Caronte eram os únicos TNOs com ocultações observadas. Até hoje, cerca de uma dezena de TNOs e Centauros tiveram ocultações observadas, alguns com apenas uma corda, como Varuna, o que permite apenas determinar um tamanho mínimo para o objeto.
+
+Com o objetivo de prever e observar ocultações estelares por TNOs, o nosso grupo conta com colaboração de pesquisadores nacionais e internacionais, profissionais e amadores. Utilizamos telescópios de pequeno e grande porte e câmera rápida para observar eventos que proporcionaram grandes descobertas, como por exemplo a descoberta do sistema de anéis ao redor do Centauro Chariklo \citep{BragaRibas2014}.
+
 
 
 \section{Astrometria}
@@ -217,7 +224,7 @@ Nesse trabalho, posições obtidas de ocultações já realizadas tem um peso mu
 \section{Ocultações Estelares}
 \label{Sec: TNO-occ}
 
-\indent \indent Como dito no Cap. \ref{Cap: intro}, certos objetos do Sistema Solar exterior podem ser considerados fósseis do Sistema Solar. Dentre esses, os TNOs, por estarem mais distantes, são os que guardam as informações mais antigas. Com o objetivo de obter os parâmetro físicos desses objetos, para melhor caracterizar as propriedades básicas dessas populações, uma grande campanha observacional é realizada para se observar ocultações estelares por TNOs e Centauros. Essa campanha é liderada por pesquisadores brasileiros, franceses e espanhóis e tem colaboração com observadores espalhados por todo o mundo.
+\indent \indent Com o objetivo de obter os parâmetro físicos desses objetos, para melhor caracterizar as propriedades básicas dessas populações, uma grande campanha observacional é realizada para se observar ocultações estelares por TNOs e Centauros. Essa campanha é liderada por pesquisadores brasileiros, franceses e espanhóis e tem colaboração com observadores espalhados por todo o mundo.
 
 Os objetos foram basicamente selecionados de acordo o grau de interesse científico (representar uma classe de TNO, ser um  objeto peculiar, etc), tamanho (quanto maior, mais chances de observar a ocultação) e região do céu (quanto mais estrelas, maior  a probabilidade de ocultar estrelas brilhantes, permitindo curvas de luz de melhor resolução espacial).
 
@@ -455,7 +462,8 @@ Mais de 8000 posições foram identificadas como pertencentes a satélites irreg
 Um dos principais resultados desse trabalho foi a grande quantidade de posições obtidas para os satélites irregulares em comparação com a quantidade utilizada nas integrações numéricas atuais (ver tabela \ref{Tab: comparison-horizons}).
 
 \begin{table}[h]
-\caption{\label{Tab: comparison-horizons} Comparação entre o número de posições obtidas em \cite{GomesJunior2015-Irregular} e o número utilizado nas integrações numéricas das órbitas pelo JPL como publicado por  \cite{Jacobson2012}. Os satélites estão separados por planeta (linha reta) e por família orbital (linha tracejada).}
+\caption{Comparação entre o número de posições obtidas em \cite{GomesJunior2015-Irregular} e o número utilizado nas integrações numéricas das órbitas pelo JPL como publicado por  \cite{Jacobson2012}. Os satélites estão separados por planeta (linha reta) e por família orbital (linha tracejada).}
+\label{Tab: comparison-horizons}
 \begin{centering}
 \begin{tabular}{lccccccc}
 \hline  \hline
@@ -630,14 +638,21 @@ Para 2015, antes que o catálogo WFI não cubra mais o caminho orbital de Tritã
 
 \indent \indent Em 21 de Maio de 2008 houve uma ocultação por Tritão cuja sombra cruzou o sul da África. Dos sítios que observaram, apenas duas cordas foram positivas. As observações foram feitas de La Réunion e da Namíbia com câmeras rápidas. Dentre elas, uma observou somente a atmosfera do objeto. Foi a primeira ocultação de Tritão desde 1997 \citep{Elliot2000}.
 
-Os perfis de pressão da atmosfera de Tritão foram calculados (Sicardy et al., comunicação privada), porém, devido a uma das cordas ter pego somente atmosfera, não foi possível determinar a posição das cordas em relação ao corpo com precisão. Isso resultou em valores de pressão próximo à superfície com pequenas barras de erro interno, mas que podem estar desviados em mais de 3 sigmas do valor real.
+Os perfis de pressão da atmosfera de Tritão foram calculados (Sicardy et al., comunicação privada), porém, devido a uma das cordas ter pego somente atmosfera, não foi possível determinar a posição das cordas em relação ao corpo com precisão (ver figura \ref{Fig: Tritao-body}). Isso resultou em valores de pressão próximo à superfície com pequenas barras de erro interno, mas que podem estar desviados em mais de 3 sigmas do valor real (ver figura \ref{Fig: Tritao-pressao}).
 
 \begin{figure}[h]
 \begin{centering}
-\subfigure[]{\includegraphics[scale=0.29]{figuras/tritao-2008.png} \label{Fig: Tritao-body}}
-\subfigure[]{\includegraphics[scale=0.29]{figuras/pressao-2008.png} \label{Fig: Tritao-pressao}}
-\caption{a) Reconstrução pós-ocultação da forma de Tritão. As linhas são as cordas observadas. Como é possível ver, a corda da Namíbia observou apenas a atmosfera de Tritão. b) Comparação entre a pressão atmosférica na superfície de Tritão obtida por Sicardy et al. (comunicação privada) e pressões publicadas na literatura: \cite{Gurola1995, Olkin1997, Sicardy1998} e \cite{Elliot2000}.
-\label{Fig: Ceres-map}}
+\includegraphics[scale=0.58]{figuras/tritao-2008.png} 
+\caption{Reconstrução pós-ocultação da forma de Tritão. As linhas são as cordas observadas. Como é possível ver, a corda da Namíbia observou apenas a atmosfera de Tritão.}
+\label{Fig: Tritao-body}
+\end{centering}
+\end{figure}
+
+\begin{figure}[h]
+\begin{centering}
+\includegraphics[scale=0.58]{figuras/pressao-2008.png} 
+\caption{Comparação entre a pressão atmosférica na superfície de Tritão obtida por Sicardy et al. (comunicação privada) e pressões publicadas na literatura: \cite{Gurola1995, Olkin1997, Sicardy1998} e \cite{Elliot2000}}.
+\label{Fig: Tritao-pressao}
 \end{centering}
 \end{figure}
 
@@ -649,7 +664,7 @@ Para recuperar essa ocultação, um trabalho astrométrico deve ser feito de for
 \section{Telemetria de sondas, marés}
 \label{Sec: Netuno-mares}
 
-\indent \indent Para o Doutorado sanduíche, irei trabalhar com as posições do OPD para estudar os efeitos de maré no sistema Netuno-Tritão. A vantagem desse banco de dados é sua cobertura temporal e grande número de observações que pode compensar falta de precisão, se comparada a posições oriundas de sondas, ao se focar em efeitos dinâmicos de longo período \citep{Lainey2012}.
+\indent \indent Para o Doutorado sanduíche, irei trabalhar com as posições do OPD para estudar os efeitos de maré no sistema Netuno-Tritão. A vantagem desse banco de dados é sua cobertura temporal (1992 - 2015), o grande número de observações e um tratamento astrométrico diferenciado. Faremos uso de coronografia digital para eliminar a influência da luz difusa de Netuno sobre Tritão, e faremos uma determinação direta de posições de Netuno (com PSFs numéricas especialmente deduzidas para o caso de objetos extensos), com Tritão no mesmo frame. Esses dados tem o mesmo valor que o de posições oriundas de sondas, em que pesem efeitos dinâmicos de longo período \citep{Lainey2012}.
 
 Além das posições de solo, irei trabalhar com posições telemétricas de sondas espaciais dentro do projeto ESPaCE (European Satellite PArtnership for Computing Ephemerides). Esse projeto tem por objetivo extrair e analisar dados astrométricos de medidas feitas por sondas espaciais e utilizá-las para cálculo de órbitas e geração de efemérides dos objetos dos Sistema Solar. Essas medidas são ultra precisas e poderão prover novos modelos dinâmicos para muitos satélites naturais\footnote{\url{http://espace.oma.be/}}.
 
@@ -657,27 +672,27 @@ A combinação desses dois bancos de dados, junto com as posições publicadas n
 
 Durante a circularização da órbita, o aquecimento causado por efeito de maré teria aumentado chegando a um fluxo de calor de $\approx 2 - 4 W m^{-2}$, comparáveis às medidas atualmente para Io. Após o aquecimento, o interior de Tritão começou a esfriar, mas mesmo hoje esse esfriamento não deve ter sido completado \citep{McKinnon2007}.
 
-Pela órbita de Tritão ser retrógrada, espera-se que sua órbita diminua devido ao efeito de maré que provoca em Netuno e seja destruído ao se aproximar do planeta devido à força de maré provocada por Netuno \citep{McKinnon2007}. Estima-se que a órbita de Tritão encolha em aproximadamente 15\% nos próximos 5 bilhões de anos.
+Pela órbita de Tritão ser retrógrada, espera-se que o semi-eixo de sua órbita diminua devido ao efeito de maré que provoca em Netuno e que seja destruído ao se aproximar do planeta devido à essa mesma força \citep{McKinnon2007}. Estima-se que a órbita de Tritão encolha em aproximadamente 15\% nos próximos 5 bilhões de anos.
 
 
 \chapter{Conclusão e Perspectivas}
 \label{Cap: perspectivas}
 
-\indent \indent Esse trabalho tem por objeto estudar os objetos do Sistema Solar exterior, de forma a obter características físicas e dinâmicas relevantes para entender a formação e evolução do Sistema Solar. As técnicas utilizadas consistem em obter posições astrométricas precisas para integração orbital e geração de efemérides. Além disso, prever, observar e reduzir ocultações estelares por esses objetos e obter seus parâmetros físicos (tamanho, forma, albedo, densidade, presença de atmosfera, satélites ou anéis).
+\indent \indent Esse trabalho tem por meta estudar os objetos do Sistema Solar exterior, de forma a obter características físicas e dinâmicas relevantes para entender a formação e evolução do Sistema Solar. As técnicas utilizadas consistem em obter posições astrométricas precisas desses corpos para corrigir erros sistemáticos em suas efemérides, ou mesmo permitir a determinação de novas órbitas com novas integrações numéricas, a fim de melhorar a predição de futuras ocultações estelares. A técnica de fotometria diferencial de abertura é empregada para gerar as curvas de luz das ocultações estelares. Prever, observar e reduzir ocultações estelares por esses objetos e obter seus parâmetros físicos (tamanho, forma, albedo, densidade, presença de atmosfera, satélites ou anéis) são os objetivos gerais desta Tese..
 
 Participo ativamente em observações de TNOs, satélites, e estrelas com o objetivo de melhorar as efemérides e/ou predição de ocultações. Nesse âmbito já escrevi 1 trabalho que está aceito para publicação: \cite{GomesJunior2015-Irregular}; e contribuo em 2 trabalhos submetidos: \cite{Camargo2015} e \cite{Desmars2015}.
 
 A busca pela predição de uma ocultação e sua melhoria na era pré-GAIA vai demandar ainda diversas missões observacionais. Quando o catálogo do GAIA for lançado, as posições das estrelas serão boas o suficientes para não precisar mais de acompanhamento, porém os objetos do Sistema Solar ainda precisaram ser observados e suas efemérides melhoradas pois serão, portanto, a única fonte de erro na predição de uma ocultação.
 
-Observar uma ocultação pode revelar características inesperadas e fornecerá um rico conhecimento dos mistérios do Sistema Solar. Exemplos disso são a descoberta de um sistema de anéis, estrutura antes conhecida apenas nos planetas gigantes, ao redor de um Centauro e a identificação de um alto albedo geométrico em Eris, objeto que está muito distante do Sol e possui um tamanho similar ao de Plutão e Tritão. Esses dois trabalhos foram publicados em \cite{BragaRibas2014} e \cite{Sicardy2011}, respectivamente, nos quais contribuí em caráter observacional.
+Observar uma ocultação pode revelar características inesperadas e até dar origem a novas descobertas no Sistema Solar. Exemplos disso são a descoberta de um sistema de anéis, estrutura antes conhecida apenas nos planetas gigantes, ao redor de um Centauro e a identificação de um alto albedo geométrico em Eris, objeto que está muito distante do Sol e possui um tamanho bem menor do que se supunha, similar ao de Plutão e Tritão. Esses dois trabalhos foram publicados na Nature em \cite{BragaRibas2014} e \cite{Sicardy2011}, respectivamente, nos quais contribuí em caráter observacional.
 
-Particularmente, Plutão possui um interesse especial. Ele é um planeta anão que possui atmosfera, cinco satélites, sendo que o maior deles possui um diâmetro pouco maior que a metade do de Plutão, e está prestes a ser visitado por uma sonda espacial. Ocultações estelares por esse objeto permitirá estudar a evolução de sua atmosfera, a qual será calibrada a partir de observações oriundas da sonda \textit{New Horizons}. Para isso uma ocultação que ocorrerá próxima à data da chegada da sonda está sendo planejada e muitos observadores mobilizados. Das observações às quais participei, dois estudos sobre a atmosfera de Plutão puderam ser feitos, um publicado: \cite{Olkin2015}; e outro está submetido: \cite{DiasOliveira2015}.
+Particularmente, Plutão possui um interesse especial. Prestes a ser visitado por uma sonda espacial, ele é um planeta anão que possui atmosfera, cinco satélites, sendo que o maior deles possui um diâmetro pouco maior que a metade do de Plutão. Ocultações estelares por esse objeto permitem estudar a evolução de sua atmosfera, a qual será calibrada a partir de observações oriundas da sonda \textit{New Horizons}. Para isso uma ocultação que ocorrerá próxima à data da chegada da sonda está sendo planejada e muitos observadores mobilizados. Das observações às quais participei, dois estudos sobre a atmosfera de Plutão puderam ser feitos, um publicado: \cite{Olkin2015}; e outro está submetido: \cite{DiasOliveira2015}.
 
 Da mesma forma que para Plutão, Ceres é um planeta anão e está sendo visitado por uma sonda. A partir de duas ocultações, calculamos o tamanho de Ceres e obtivemos posições muito precisas. Os resultados foram publicados em \cite{GomesJunior2015-Ceres} e serviram como aprendizado pessoal quanto à utilização da técnica. Quando os resultados da sonda \textit{Dawn} forem publicados, será possível calibrar a técnica de ocultações estelares utilizada nesse trabalho.
 
-Muitos outros objetos estão na lista para se observar ocultações estelares, todos com grandes potenciais científicos. Por exemplo, há a possibilidade de que o Centauro (2060) Chiron também possua anéis \citep{Ruprecht2015}. Como o número de ocultações detectadas pelo nosso grupo vem aumentando ao longo do tempo e aumentará muito mais com o GAIA, diversas publicações ainda estão por vim.
+Muitos outros objetos estão na lista para se observar ocultações estelares, todos com grandes potenciais científicos. Por exemplo, há a possibilidade de que o Centauro (2060) Chiron também possua anéis \citep{Ruprecht2015}. Como o número de ocultações detectadas pelo nosso grupo vem aumentando ao longo do tempo e aumentará muito mais com o GAIA, diversas publicações ainda estão por vir.
 
-Dentre os objetos a serem ocultados, inserimos na lista os satélites irregulares dos planetas gigantes, nunca antes observados por ocultações. Diversas ocultações já estão preditas e publicação destas predições está em preparação. Observações de ocultações por Himalia, satélite de Júpiter, e Tritão para esse ano estão sendo preparadas.
+Dentre os objetos a serem ocultados, inserimos na lista os satélites irregulares dos planetas gigantes, nunca antes observados por ocultações. Diversas ocultações já estão preditas e a publicação destas predições está em preparação (Gomes-Júnior et al. 2015, A\&A, in prep.). Observações de ocultações por Himalia, satélite de Júpiter, e Tritão para esse ano estão sendo preparadas.
 
 Por fim, estudos sobre efeitos de maré no sistema Netuno-Tritão para obter parâmetros internos do satélites serão feitos durante o Doutorado Sanduíche que ocorrerá na França em colaboração com o Doutor Valéry Lainey. Nesse trabalho, focaremos na obtenção de posições astrométricas do sistema a partir de imagens de solo observadas no OPD e de sondas espaciais dentro do projeto ESPaCE.
 
