--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -463,6 +463,20 @@ month={Jun},
 pages={A32}
 }
 
+@article{Elliot2010,
+title={Size and albedo of Kuiper belt object 55636 from a stellar occultation},
+volume={465},
+url={http://dx.doi.org/10.1038/nature09109},
+DOI={10.1038/nature09109},
+number={7300},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Elliot, J. L. and Person, M. J. and Zuluaga, C. A. and others},
+year={2010},
+month={Jun},
+pages={897–900}
+}
+
 @Article{Sicardy2011,
 title={\href{http://dx.doi.org/10.1038/nature10550}{A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation}},
 volume={478},
@@ -558,13 +572,19 @@ month={May},
 pages={14}
 }
 
-@InProceedings{McKinnon2012,
-author = {McKinnon, W. B.},
-title = {\href{http://adsabs.harvard.edu/abs/2012LPICo1667.6475M}{Where did Ceres accrete?}},
-booktitle = {LPI Contrib},
-year = {2012},
-volume = {1667},
-number = {6475}
+
+
+@article{McKinnon2012,
+   author = {{McKinnon}, W. B.},
+    title = {\href{http://adsabs.harvard.edu/abs/2012LPICo1667.6475M}{Where Did Ceres Accrete?}},
+  journal = {LPI Contributions},
+     year = 2012,
+    month = may,
+   volume = 1667,
+      eid = {6475},
+    pages = {6475},
+   adsurl = {http://adsabs.harvard.edu/abs/2012LPICo1667.6475M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @Article{Zacharias2013,
@@ -621,7 +641,7 @@ month={Jul},
 pages={28–37}
 }
 
-@Article{Dunham2014,
+@article{Dunham2014,
 author = {Dunham, D.W. and others},
 year = {2014},
 journal = {\href{http://sbn.psi.edu/pds/resource/occ.html}{Asteroid Occultations V12.0. EAR-A-3-RDR-OCCULTATIONS-V12.0. NASA Planetary Data System}},
