Feito figura legal

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -449,7 +449,7 @@ Para Phoebe, materiais ejetados de sua superfície causadas por impactos poderia
 
 Se esses objetos foram capturados, permanece a pergunta de onde eles vieram. \citealp{Clark2005} mostraram a partir de espectroscopia da Cassini que Phoebe tem uma superfície provavelmente coberta por material do Sistema Solar externo e \citealp{Grav2003} mostraram que os satélites de grupo prógrado de Júpiter Himalia tem cores cinzas implicando que suas superfícies são similares a asteróides tipo C. Nesse mesmo trabalho, o grupo retrógrado de Júpiter Carme foi encontrado como tendo cores superficiais semelhantes à asteroides tipo D como a família de Hilda ou famílias de troianos, enquanto JXIII Kalyke tem uma cor mais avermelhada como centauros ou objetos trans-Netunianos (TNOs).
 
-Para os satélites de saturno, \citealp{Grav2007} mostraram através de suas cores e inclinações espectrais que esses satélites contêm uma fração mais ou menos igual de objetos semelhantes a asteroides tipo c, P e D, mas SXXII Ijiraq é um pouco mais avermelhado que objetos tipo D. Esses trabalhos sugerem origens diferentes para os satélites irregulares.
+Para os satélites de saturno, \citealp{Grav2007} mostraram através de suas cores e inclinações espectrais que esses satélites contêm uma fração mais ou menos igual de objetos semelhantes a asteroides tipo C, P e D, mas SXXII Ijiraq é um pouco mais avermelhado que objetos tipo D. Esses trabalhos sugerem origens diferentes para os satélites irregulares.
 
 
 \section{Astrometria}
