começado a correção do qualify

--- a/Irregular-occ/Irregular-occ.tex
+++ b/Irregular-occ/Irregular-occ.tex
@@ -167,8 +167,16 @@ Federal University of Technology - Paraná (UTFPR / DAFIS), Rua Sete de Setembro
 
 %The databases are described in Sect. \ref{Sec: observations}. The astrometric procedures in Sect. \ref{Sec: reduction}. The obtained positions are presented in Sect \ref{Sec: positions} and analysed in Sect. \ref{Sec: comparison}. Conclusions are given in Sect. \ref{Sec: conclusions}.
 
+\section{Rationale} \label{Sec: Rationale}
 
-\section{Conclusions} \label{Sec: conclusions}
+
+\section{Offset methods} \label{Sec: Offset}
+
+
+\section{Occultation tests} \label{Sec: testes}
+
+
+\section{Discussion} \label{Sec: conclusions}
 
 %We managed a large database with FITS images acquired by 5 telescopes in 3 sites between 1992 and 2014. From that, we identified 8466 observations of irregular satellites, from which we managed to obtain 6523 suitable astrometric positions, giving a total of 3666 positions for 12 satellites of Jupiter, 1920 positions for 4 satellites of Saturn, 35 positions for Sycorax (Uranus) and 902 positions for Nereid (Neptune).
 
